<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GRE Syns</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_box">Box</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>

    <string name="title_activity_display">DisplayActivity</string>


    <string name="viewbutton">View Groups</string>
    <string name="title_activity_view_word_list">ViewWordList</string>
    <string name="addbutton">Add to another group</string>
    <string name="title_activity_group_display">GroupDisplay</string>
    <string name="title_activity_group_display_confirm">GroupDisplay</string>
    <string name="word">Word</string>
    <string name="title_activity_group_list">GroupList</string>
    <string name="boxlist">Box List</string>
    <string name="grouplist">Group List</string>
    <string name="greheading">From the GRE wordlist :</string>
    <string name="otherheading">Other meanings :</string>
    <string name="newlist">Create new group</string>
    <string name="add_confirm">Add</string>
    <string name="search">Search</string>
    <string name="title_activity_new_group">NewGroup</string>
    <string name="meaningLabel">Enter meaning of the group:</string>
    <string name="pos">Choose a POS:</string>
    <string name="meaning_hint">Meaning</string>

    <string-array name="poslist">
        <item>Noun</item>
        <item>Verb</item>
        <item>Adjective</item>
    </string-array>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_about">About</string>
<<<<<<< HEAD
    <string name="version">Beta</string>
=======
    <string name="version">v1.0</string>
>>>>>>> 48c7dea1fd7e43b7ab59ed108662ac9e43222edc
    <string name="contact">jitendra.jain@live.com\\ndeepshah@live.com</string>
    <string name="jitendra">jitendra.jain@live.com</string>
    <string name="deep">deepshah@live.com</string>
    <string name="dharmendra">dharmendra.hingu@gmail.com</string>
    <string name="about">About</string>
<<<<<<< HEAD
    <string name="next">Next</string>
    <string name="prev">Prev</string>
=======
>>>>>>> 48c7dea1fd7e43b7ab59ed108662ac9e43222edc

</resources>